unpackaged/main/default/objects/CountryMapping__mdt/CountryMapping__mdt.object-meta.xml
<CustomObject>
    <label>Country mapping</label>
    <pluralLabel>Country mapping</pluralLabel>
</CustomObject>