unpackaged/main/default/objects/CountryMapping__mdt/fields/CountryLabel__c.field-meta.xml
<CustomField>
    <fullName>CountryLabel__c</fullName>
    <label>Country label</label>
    <length>100</length>
    <type>Text</type>
</CustomField>