unpackaged/main/default/objects/CountryMapping__mdt/fields/CoutryISOcode__c.field-meta.xml
<CustomField>
    <fullName>CoutryISOcode__c</fullName>
    <label>Coutry ISO code</label>
    <length>8</length>
    <type>Text</type>
</CustomField>