unpackaged/main/default/objects/CountryMapping__mdt/fields/DefaultCountryLabel__c.field-meta.xml
<CustomField>
    <fullName>DefaultCountryLabel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Default Country Label</label>
    <type>Checkbox</type>
</CustomField>