unpackaged/main/default/objects/CountryMapping__mdt/fields/LanguageISOcode__c.field-meta.xml
<CustomField>
    <fullName>LanguageISOcode__c</fullName>
    <label>Language ISO code</label>
    <length>8</length>
    <type>Text</type>
</CustomField>